# sdk-nrf

./: CMakeLists.txt  CODEOWNERS  Jenkinsfile  Jenkinsfile.doc  Kconfig.nrf  README.rst  VERSION  west.yml
applications/thread_border_router/: CMakeLists.txt  Kconfig  Kconfig.defaults  README.rst  overlay-nat64.conf  overlay-static_credentials.conf  prj.conf  prj_release.conf  sample.yaml
applications/thread_border_router/boards/: nrf54h20dk_nrf54h20_cpuapp_soc1.overlay
applications/thread_border_router/configuration/: nrf7002eb.conf  nrf7002eb.overlay
applications/thread_border_router/src/: backbone_agent.h  border_agent.c  border_agent.h  main.c  mdns_publisher.c  mdns_publisher.h  shell.c  tbr.c  tbr.h  utils.h
applications/thread_border_router/src/api_extensions/: ip6_ext.cpp
applications/thread_border_router/src/backbone/: backbone_agent.c  backbone_agent.h  mcast_routing.c  mcast_routing.h  nd_proxy.c  nd_proxy.h  nd_proxy_internal.h
applications/thread_border_router/src/net/: CMakeLists.txt  Kconfig  mdns_internal.c  mdns_internal.h  mdns_server.c  mdns_server.h  nat_core.c  nat_proto.c  nat_proto.h  routev4.c
applications/thread_border_router/src/platform/: infra_if.c  infra_if.h  udp.c
applications/thread_border_router/src/utils/: utils.c
applications/thread_border_router/tests/utils/: CMakeLists.txt  prj.conf  testcase.yaml
include/: esb.h
lib/nrf_modem_lib/tee_partition/: CMakeLists.txt  iuicc.c  iuicc.h  tee_partition.c  tfm_manifest_list.yaml  tfm_manifest_list.yaml.in  tfm_tee_partition.yaml
modules/nrfxlib/nrf_802154/: CMakeLists.txt
nrf5_sdk/libraries/: CMakeLists.txt  Kconfig  app_button.c  app_scheduler.c  ble_advertising.c  ble_conn_params.c  ble_conn_state.c  irq_connect.c  nrf_atfifo.c  nrf_ble_gatt.c  nrf_ble_qwr.c
nrf5_sdk/libraries/ble_services/: CMakeLists.txt  ble_bas.c  ble_dis.c  ble_hids.c
nrf5_sdk/libraries/bsp/: bsp.c
nrf5_sdk/libraries/fds/: CMakeLists.txt  Kconfig  fds.c  fds_internal_defs.h
nrf5_sdk/libraries/fstorage/: CMakeLists.txt  Kconfig  nrf_fstorage.c  nrf_fstorage.ld  nrf_fstorage_nvmc.c  nrf_fstorage_sd.c
nrf5_sdk/libraries/peer_manager/: CMakeLists.txt  auth_status_tracker.c  gatt_cache_manager.c  gatts_cache_manager.c  id_manager.c  nrf_ble_lesc.c.no  peer_data_storage.c  peer_database.c  peer_id.c  peer_manager.c  peer_manager_handler.c  pm_buffer.c  security_dispatcher.c  security_manager.c
samples/ipc/ipc_service/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/ipc/ipc_service/boards/: nrf54h20dk_nrf54h20_cpuapp_gpio_latency.overlay  nrf54h20dk_nrf54h20_cpuapp_ppr.conf  nrf54h20dk_nrf54h20_cpuapp_ppr.overlay  nrf54h20dk_nrf54h20_cpuapp_rad.conf  nrf54h20dk_nrf54h20_cpuapp_rad.overlay  nrf54h20dk_nrf54h20_cpuapp_rad_icmsg.overlay  nrf54h20dk_nrf54h20_cpuapp_sys.conf  nrf54h20dk_nrf54h20_cpuapp_sys.overlay  nrf54h20dk_nrf54h20_cpuapp_sys_icmsg.overlay  nrf54h20dk_nrf54h20_cpurad_sys.conf  nrf54h20dk_nrf54h20_cpurad_sys.overlay  nrf54h20dk_nrf54h20_cpurad_sys_icmsg.overlay  nrf7140dk_nrf7140_cpuapp_ppr.conf  nrf7140dk_nrf7140_cpuapp_ppr.overlay  nrf9230dk_nrf9230_cpuapp_mod.conf  nrf9230dk_nrf9230_cpuapp_mod.overlay  nrf9230dk_nrf9230_cpuapp_mod_icmsg.overlay  nrf9230dk_nrf9230_cpuapp_ppr.overlay  nrf9230dk_nrf9230_cpuapp_rad.conf  nrf9230dk_nrf9230_cpuapp_rad.overlay  nrf9230dk_nrf9230_cpuapp_rad_icmsg.overlay  nrf9230dk_nrf9230_cpuapp_sys.conf  nrf9230dk_nrf9230_cpuapp_sys.overlay  nrf9230dk_nrf9230_cpuapp_sys_icmsg.overlay  nrf9230dk_nrf9230_cpurad_sys.conf  nrf9230dk_nrf9230_cpurad_sys.overlay  nrf9230dk_nrf9230_cpurad_sys_icmsg.overlay
samples/ipc/ipc_service/remote/: CMakeLists.txt  prj.conf
samples/ipc/ipc_service/src/: main.c
samples/matter/lock/: CMakeLists.txt  Kconfig  README.rst  envelope.yaml.jinja2  envelope.yaml.jinja2.digest  prj_fpga.conf  sample.yaml
samples/matter/lock/boards/: nrf54fpga_nrf5420soc1_cpuapp.overlay  nrf54fpga_nrf5420soc1_cpuapp.toml  nrf54h20_common.dtsi  nrf54h20_mram_settings.overlay  nrf54h20_pdk.overlay  nrf54h20_pdk.toml  nrf54h20dk_nrf54h20_cpuapp.toml  nrf54h20dk_nrf54h20_cpuapp_soc1.conf  nrf54h20dk_nrf54h20_cpuapp_soc1.overlay  nrf54h20dk_nrf54h20_cpuapp_soc1_no_dfu.conf  nrf54h20dk_nrf54h20_cpuapp_soc1_no_dfu.overlay  nrf54l15_fpga_overlay.conf  nrf54l15dk_nrf54l15_cpuapp_soc1.overlay  nrf54l15dk_nrf54l15_cpuapp_soc1_no_dfu.conf
samples/matter/lock/src/: app_event.h  app_task.cpp  app_task.h  bolt_lock_manager.h  chip_project_config.h
samples/multicore/hello_world/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.rst  sample.yaml
samples/multicore/hello_world/aci/: CMakeLists.txt
samples/multicore/hello_world/boards/: nrf54fpga_nrf5420_cpuapp.conf  nrf54fpga_nrf5420_cpuapp.overlay  nrf54fpga_nrf5420soc1_cpuapp.conf  nrf54fpga_nrf5420soc1_cpuapp.overlay  nrf54h20dk_nrf54h20_cpuapp_soc1.conf  nrf54h20dk_nrf54h20_cpuapp_soc1.overlay  nrf54h20dk_nrf54h20_cpuapp_soc1_stm_logging.overlay  nrf7140dk_nrf7140_cpuapp.overlay  nrf9230dk_nrf9230_cpuapp.overlay  nrf9230dk_nrf9230_cpuapp_stm_logging.overlay
samples/multicore/hello_world/remote/: prj.conf
samples/multicore/hello_world/src/: main.c
samples/multicore/hello_world/uicr/: nrf54fpga_nrf5420_cpuapp.yaml  nrf54fpga_nrf5420soc1_cpuapp.toml  nrf54h20dk_nrf54h20_cpuapp.toml
samples/nrf9160/https_client/: CMakeLists.txt  Kconfig  prj.conf
samples/nrf9160/https_client/boards/: nrf9160dk_nrf9160_ns.overlay
samples/nrf9160/https_client/src/: main.c
samples/openthread/coprocessor/: CMakeLists.txt  Kconfig  overlay-fpga.conf  sample.yaml
samples/openthread/coprocessor/boards/: nrf54l15dk_nrf54l15_cpuapp_soc1.conf  nrf54l15dk_nrf54l15_cpuapp_soc1.overlay
samples/openthread/coprocessor/src/: nrf_802154_const.h
samples/suit/smp_transfer/: CMakeLists.txt  Kconfig  README.rst  overlay-bt.conf  prj.conf  sample.yaml
subsys/suit/cache/: CMakeLists.txt  Kconfig
subsys/suit/platform/: CMakeLists.txt  Kconfig
subsys/suit/storage/: CMakeLists.txt  Kconfig
subsys/suit/utils/: CMakeLists.txt
tests/tfm/hello_world/: CMakeLists.txt  README.rst  prj.conf  testcase.yaml
(+1569 files in other folders)
